--- a/HOME.HTML
+++ b/HOME.HTML
@@ -9,6 +9,10 @@
 <body>
     <h1>
         learing add
+
+    </h1>
+    <h1>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem laudantium tempora possimus incidunt cumque, quidem adipisci optio maxime nulla sequi placeat quo doloremque. Maxime error dicta sapiente, dolorum nesciunt ducimus.
     </h1>
 </body>
 </html>
