--- a/HTML_CLASS/index.html
+++ b/HTML_CLASS/index.html
@@ -7,6 +7,7 @@
     <title>Learning html</title>
 </head>
 <body>
+    <h1>heading tags </h1>
     <h1>heading tag h1</h1>
     <h2>heading tag h2 </h2>
     <h3>heading tag h3</h3>
