html class first code
html class first code

--- a/HTML_CLASS/index.html
+++ b/HTML_CLASS/index.html
@@ -4,17 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning html</title>
+    <title>Document</title>
+    <style>
+        #paragraph{
+            color: cornflowerblue;
+        }
+        .name{
+            font-size: xx-large;
+            color: green;
+        }
+        .heading{
+            color: aqua;
+            font-size: 3em;
+        }
+    </style>
 </head>
 <body>
-    <h1>heading tags </h1>
-    <h1>heading tag h1</h1>
-    <h2>heading tag h2 </h2>
-    <h3>heading tag h3</h3>
-    <h4>heading tag h4 </h4>
-    <h5>heading tag h5</h5>
-    <h6>heading tag h6 </h6>
-    
-</body>
+    <div>
+        <div class="p">
+            <p>Lorem idivsum dolor, sit amet consectetur adipisicing elit. Maiores recusandae sint a, autem architecto repellendus officiis nihil provident vitae inventore voluptatibus repudiandae deserunt reiciendis? Quisquam quis reiciendis animi, tempore ratione maiores a. Magnam pariatur et neque, quidem reprehenderit maxime, esse impedit, libero cupiditate culpa vel possimus dolorem repellendus cum voluptates!</p>
+        </div>
+        <p id="paragraph"> 
+            <h1 class="heading">heading  here</h1> 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ex qui atque iusto enim fugit dolorem fugiat, veritatis cupiditate, voluptatibus laboriosam dolore distinctio architecto recusandae soluta tenetur alias. Ex, delectus.
+        </p>
 
+        <p class="name"><h1 class="heading">heading here</h1> sit amet consectetur adipisicing elit. Itaque maxime iure, quisquam deleniti, eius aut aperiam sunt ipsa minus neque quibusdam voluptatem aspernatur? Ipsum nam asperiores soluta enim inventore libero?</p>
+        <hr>
+        <p class="name"><h1 class="heading">heading here</h1>sit amet consectetur adipisicing elit. Accusamus, nemo iusto at laudantium repellat amet nostrum excepturi officiis quia impedit velit dolorum similique fuga tenetur quis illum magnam a. Sunt.</p>
+        <hr>
+        <!-- paragraph starting -->
+        <p class="name"><h1 class="heading">heading here</h1> consectetur adipisicing elit. Id at temporibus numquam sequi consequuntur assumenda repudiandae corrupti eum placeat eveniet, fuga, deleniti eaque quis aperiam quia harum ratione. Mollitia, illum.</p>
+        <hr>
+        <div class="entities">
+            <h1></h1>
+            &lt;h1&gt; &pi; &lt;&sol;h1&gt;
+        </div>
+        <!-- header starting -->
+        <div class="header">
+            <header></header>
+        </div>
+        <!-- header end -->
+    </div>
+</body>
 </html>
