css first class

--- a/HTML_CLASS/index.html
+++ b/HTML_CLASS/index.html
@@ -5,35 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        #paragraph{
-            color: cornflowerblue;
-        }
-        .name{
-            font-size: xx-large;
-            color: green;
-        }
-        .heading{
-            color: #748b8b;
-            font-size: 3em;
-            font-weight:100;
-        }
-        .header{
-            color: mediumpurple;
-        }
-    </style>
+    <link rel="stylesheet" href="../css_class/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
     <div>
         <div class="p">
             <p>Lorem idivsum dolor, sit amet consectetur adipisicing elit. Maiores recusandae sint a, autem architecto repellendus officiis nihil provident vitae inventore voluptatibus repudiandae deserunt reiciendis? Quisquam quis reiciendis animi, tempore ratione maiores a. Magnam pariatur et neque, quidem reprehenderit maxime, esse impedit, libero cupiditate culpa vel possimus dolorem repellendus cum voluptates!</p>
         </div>
-        <p id="paragraph"> 
-            <h1 class="heading">heading  here</h1> 
+        <div id="css-color">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quos voluptatum voluptatibus inventore harum porro temporibus iusto aliquam? Rem esse et assumenda molestias aliquid ipsam minima quia debitis nobis voluptas. Beatae porro quam expedita recusandae animi. Perspiciatis in eligendi veritatis sint, aspernatur est? Odio quis tenetur commodi ullam eaque velit blanditiis voluptatem a modi quo eos illum placeat facilis omnis mollitia, optio, quaerat et cupiditate, maxime nisi corporis at. Sequi voluptatem dicta enim vitae porro ratione eos non quidem dolore tempore totam magni incidunt commodi, recusandae dolor dolorum consequatur neque nostrum? Beatae quo quae exercitationem officia officiis? Quisquam, earum! Neque veniam impedit repudiandae qui sunt aliquam explicabo ducimus quibusdam, possimus ad tempore iure vitae commodi ratione iusto? Nostrum iure ipsam asperiores blanditiis ducimus nisi sunt cum, reprehenderit nesciunt, labore error nulla impedit voluptatibus veritatis corrupti, sapiente porro quaerat accusamus molestiae! Odit ipsum eos vel quae quo sequi corporis earum, provident quasi inventore perferendis placeat distinctio facilis consequatur asperiores fugiat quos voluptatum dolores? Aspernatur ab tempore temporibus quaerat harum, voluptatum animi quo? Qui non illum explicabo voluptates sequi rerum omnis laborum, cupiditate possimus, optio tempora id quod laboriosam ea quo molestiae assumenda suscipit quis! Voluptatum, dolores similique incidunt vero doloribus harum! Sit et aperiam atque minus est ab maiores non, iusto dolores tempore mollitia sed deserunt exercitationem animi cumque odio nisi, voluptas qui dolore, voluptatem vero. Numquam sunt sed ut quasi deserunt consectetur illo labore hic nulla, est voluptate expedita corrupti quod, debitis aperiam eaque ab distinctio officiis rerum amet earum optio pariatur maxime! Sint expedita, molestias fugit veniam aut est quae? Dolores repudiandae beatae similique, ut eligendi blanditiis, accusamus tempore autem aut itaque magni veniam sed, quas minus hic sequi sunt aliquam ea! Natus maxime dolor quibusdam eos ex dicta provident velit? Temporibus, dignissimos delectus reiciendis numquam culpa veniam quidem!
+        </div>
+        <p id="paragraph">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ex qui atque iusto enim fugit dolorem fugiat, veritatis cupiditate, voluptatibus laboriosam dolore distinctio architecto recusandae soluta tenetur alias. Ex, delectus.
         </p>
-
-        <p class="name"><h1 class="heading">heading here</h1> sit amet consectetur adipisicing elit. Itaque maxime iure, quisquam deleniti, eius aut aperiam sunt ipsa minus neque quibusdam voluptatem aspernatur? Ipsum nam asperiores soluta enim inventore libero?</p>
+        <h1 id="headingtag">
+            heading tag
+        </h1>
+        <p id="name">
+            <h1 class="heading">heading here</h1> sit amet consectetur adipisicing elit. Itaque maxime iure, quisquam deleniti, eius aut aperiam sunt ipsa minus neque quibusdam voluptatem aspernatur? Ipsum nam asperiores soluta enim inventore libero?
+        </p>
         <hr>
         <p class="name"><h1 class="heading">heading here</h1>sit amet consectetur adipisicing elit. Accusamus, nemo iusto at laudantium repellat amet nostrum excepturi officiis quia impedit velit dolorum similique fuga tenetur quis illum magnam a. Sunt.</p>
         <hr>
