css second class

--- a/HTML_CLASS/link.html
+++ b/HTML_CLASS/link.html
@@ -5,8 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>link html</title>
+    <link rel="stylesheet" href="../css_class/index.css">
 </head>
 <body>
-    <h1>link html file</h1>
+    <div class="header">
+        <h1 id="header">margin and padding in css</h1>
+        <hr>
+        <div class="div1" id="new-id">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, accusamus? Quisquam quis, harum error architecto, cum, nemo fugiat placeat non at minima doloremque odit sunt? Quo velit quia nisi sequi porro dolor, ut fugiat reprehenderit dolore corporis eaque commodi repellendus.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt nisi accusantium, beatae, facere consequatur iste autem voluptas minima eveniet possimus ratione assumenda vel temporibus aperiam minus sint corporis earum asperiores?
+
+        </div>
+        <div class="circle">
+            <div id="cir"><h1>none</h1></div>
+        </div>
+        <div class="circle1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eaque laborum ducimus hic unde vitae ipsum aperiam eum odio neque, tenetur corrupti veniam eos labore dolorem sit facere libero nesciunt.</div>
+        <div id="circle2"></div>
+        <div></div>
+        <div class="div1" id="div2">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio cumque nobis exercitationem totam autem itaque harum similique voluptatum corrupti, maiores fugiat magnam eum cum repudiandae quaerat perferendis, sit earum atque impedit repellat ut iure praesentium porro temporibus! Architecto assumenda nostrum in, accusantium magnam ullam nemo ipsam mollitia asperiores corrupti quos molestias eos amet! Necessitatibus deserunt ipsam nobis corrupti perspiciatis nemo quo molestias aliquam cumque, ratione autem cum unde eius libero magni facere ipsa aut optio? Cumque vitae, numquam nesciunt tempore illum, animi necessitatibus quis cum quam et reiciendis nulla. Libero est laboriosam odio? Maxime minus totam quidem omnis voluptas a.
+        </div>
+    </div>
+    <div class="psuedo-class">
+        <a href="../HTML_CLASS/link.html" target="_blank">link html file</a>
+        <br>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul" target="_blank">mdn docs</a>
+    </div>
+    <div id="form">
+        <label for="name">Name : </label>
+        <input type="text" name="name" id="name" placeholder="enter your name" required>
+        <br>
+    </div>
+    <img src="../image/image_2.jpeg" alt="image second">
+    <div class="block">
+        <div class="block1">block 1</div>
+        <div class="block2">block 2</div>
+        <div class="block3">block 3</div>
+    </div>
+    <div class="list-type">
+        <ul>
+            <li>line 1</li>
+            <li>line 2</li>
+            <li>line 2</li>
+            <li>line 2</li>
+            <li>line 2</li>
+            <li>line 2</li>
+        </ul>
+    </div>
 </body>
 </html>
