--- a/HTML_CLASS/link.html
+++ b/HTML_CLASS/link.html
@@ -12,8 +12,8 @@
         <h1 id="header">margin and padding in css</h1>
         <hr>
         <div class="div1" id="new-id">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, accusamus? Quisquam quis, harum error architecto, cum, nemo fugiat placeat non at minima doloremque odit sunt? Quo velit quia nisi sequi porro dolor, ut fugiat reprehenderit dolore corporis eaque commodi repellendus.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt nisi accusantium, beatae, facere consequatur iste autem voluptas minima eveniet possimus ratione assumenda vel temporibus aperiam minus sint corporis earum asperiores?
+        <p>My friends is com to the party tonght.</p>
+        elit. Deserunt nisi accusantium, beatae, facere consequatur iste autem voluptas minima eveniet possimus ratione assumenda vel temporibus aperiam minus sint corporis earum asperiores?
 
         </div>
         <div class="circle">
