--- a/HTML_CLASS/base_html.html
+++ b/HTML_CLASS/base_html.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css_class/bs.css">
+    
+    <style>
+        .grad{
+            background:linear-gradient(14deg,#b7b7a4, #a8dadc,#1d3557,#03045e,#283618);
+            width: 400px;
+            height: 400px;
+        }
+    </style>
 </head>
 <body>
     <h1 class="h1 text-center">heading tags</h1>
+    <div class="grad"></div>
     
 </body>
 </html>
