--- a/HTML_CLASS/link.html
+++ b/HTML_CLASS/link.html
@@ -12,14 +12,16 @@
         <h1 id="header">margin and padding in css</h1>
         <hr>
         <div class="div1" id="new-id">
-        <p>My friends is com to the party tonght.</p>
-        elit. Deserunt nisi accusantium, beatae, facere consequatur iste autem voluptas minima eveniet possimus ratione assumenda vel temporibus aperiam minus sint corporis earum asperiores?
-
+            <p>My friends is com to the party tonght.</p>
         </div>
         <div class="circle">
-            <div id="cir"><h1>none</h1></div>
+            <div id="cir">
+                <h1>none</h1>
+            </div>
         </div>
-        <div class="circle1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eaque laborum ducimus hic unde vitae ipsum aperiam eum odio neque, tenetur corrupti veniam eos labore dolorem sit facere libero nesciunt.</div>
+        <div class="circle1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eaque laborum ducimus hic unde vitae ipsum aperiam eum odio neque, tenetur corrupti veniam eos labore dolorem sit facere libero nesciunt.
+        </div>
         <div id="circle2"></div>
         <div></div>
         <div class="div1" id="div2">
