--- a/HTML_CLASS/html_bs.html
+++ b/HTML_CLASS/html_bs.html
@@ -1,23 +1,18 @@
-<!DOCTYPE html>
-<html>
-<body>
-  <form action="center">
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Bootstrap 4!</title>
+  </head>
+  <body>
+    <h1 class="text-center bg-danger text-warning">Bootstrap 4!</h1>
 
-    <h1>The fieldset element</h1>
-
-      <fieldset>
-      <legend style="text-align: center;" >Personalia:</legend>
-      <label for="fname">First name:</label>
-      <input type="text" id="fname" name="fname"><br><br>
-      <label for="lname">Last name:</label>
-      <input type="text" id="lname" name="lname"><br><br>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email"><br><br>
-      <label for="birthday">Birthday:</label>
-      <input type="date" id="birthday" name="birthday"><br><br>
-      <input type="submit" value="Submit">
-    </fieldset>
-  </form>
-
-</body>
+    
+    <!-- javascript come here  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  </body>
 </html>
